# ifloor

./: README.md  pyproject.toml
hackathon_scripts/: divided_rectangle.py  kill_all.py  square.py  tpose.py
ifloorstarterkit/: ifloorstarterkit.py
jetracer_control/: Setup.txt  motion_and_camera_test.ipynb
