[tool.poetry]
name = "ifloorstarterkit"
version = "0.1.0"
description = ""
authors = ["Ewert Daniel <daniel.ewert@bosch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
assets2036py = "^0.0.19"

[tool.poetry.scripts]
ifloor = "ifloorstarterkit.ifloorstarterkit:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
